[package]
name = "rdb_tool"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"
description = "A wrapper to make debugging Rust pleasant"
repository = "https://github.com/mgattozzi/rdb.git"
homepage = "https://github.com/mgattozzi/rdb"
documentation = "https://docs.rs/rdb/"
readme = "README.md"
keywords = ["lldb", "debugger", "cli", "tool"]
categories = ["command-line-utilities"]
license = "MIT/Apache-2.0"

[dependencies]
structopt = "0.2.14"

[[bin]]
name = "rdb"
path = "src/main.rs"
